<resources>
    <string name="app_name">TraCuuKaraoke</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="like">Like</string>
    <string name="location">Location</string>
    <string name="help">Help</string>
    <string name="hint_search_the_song_the_singer">Search the song, the singer...</string>
    <string name="m_b_i_h_t">Mã số:</string>
    <string name="save_online">Save online</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="add_favorite_songs">Add favorite songs</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="song">Song</string>
    <string name="sing_online">Sing Online</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="your_current_location">Your current location</string>
    <string name="seach">Seach</string>
    <string name="edit">Edit</string>
    <string name="song_name">Song name</string>
    <string name="song_code">Song code</string>
    <string name="singer">Singer</string>
    <string name="lyrics">lyrics</string>
    <string name="karaoke">Karaoke</string>
    <string name="add_karaoke">Add Karaoke</string>
    <string name="address">Address</string>
    <string name="time">Time</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="name_karaoke">Name Karaoke</string>
    <string name="back">Back</string>
    <string name="add_song">Add Song</string>
</resources>
