<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bober_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edtTenBH"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/song_name"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:enabled="false"
        android:background="@drawable/border_edittext_non_edit"/>
    <EditText
        android:id="@+id/edtMaBH"
        android:enabled="false"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/song_code"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_non_edit"/>
    <EditText
        android:id="@+id/edtCaSi"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/singer"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtLoibaiHat"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/lyrics"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#FFFF"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_luu"
            android:id="@+id/btnLuuEdit"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFF"
            android:id="@+id/btnHuyEdit"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_huy"
            android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>