<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bober_dialog"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_karaoke"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imgHinh"
        android:layout_width="@dimen/w100"
        android:layout_height="@dimen/w100"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/edtNameKaraoke"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_karaoke"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtDiaChi"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:inputType="textWebEmailAddress"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtGioLamViec"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtKinhDo"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtViDo"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#FFFF"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_luu"
            android:id="@+id/btnLuuQuanKaraoke"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFF"
            android:id="@+id/btnBack"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_huy"
            android:text="@string/back"/>
    </LinearLayout>
</LinearLayout>