<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bober_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_favorite_songs"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edtName"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:inputType="textWebEmailAddress"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtPhone"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#FFFF"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_luu"
            android:id="@+id/btnLuuMonHoc"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFF"
            android:id="@+id/btnHuyMonHoc"
            android:layout_margin="5dp"
            android:background="@drawable/bober_button_huy"
            android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>