<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bober_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_song"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNameSong"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/song_name"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtMaSong"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:inputType="textWebEmailAddress"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/song_code"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>

    <EditText
        android:id="@+id/edtCaSi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/border_edittext_c"
        android:hint="@string/singer"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/edtLoibaiHat"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/lyrics"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#000000"
        android:background="@drawable/border_edittext_c"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgSaveSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_edittext_non_edit"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save"/>
        <ImageView
            android:id="@+id/imgCancelSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_edittext_non_edit"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_revert"/>
    </LinearLayout>
</LinearLayout>